--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <script src="node_modules/jquery/dist/jquery.js"></script>
   </head>
   <body>
-    <div class="container">
-      <h2 id = pun>Enter pun here</h2>
-      <button type = "button">New Pun</button>
+    <div class="pun">
+      <h2 id = pun></h2>
+      <button id="new-pun">New Pun</button>
+    </div>
+    <div class= "submit">
+      <h2>Submit a pun!</h2>
+      <p>Title: <input type="text" id="name"></p>
+      <p>Pun: <input type="text" id="content"></p>
+      <button id="add-pun">Submit Pun</button>
     </div>
   </body>
   
